fix issue with app shortcuts due to mobile warn
- i messed up this is a quick patch

--- a/src/style.scss
+++ b/src/style.scss
@@ -861,6 +861,7 @@ input[type="checkbox"].switch {
 // detect if device is touchscreen
 .renderIfTouchScreen {
   opacity: 0;
+  display: none !important;
 }
 @media (pointer: coarse) {
   .renderIfTouchScreen {
